--- a/index.html
+++ b/index.html
@@ -13829,6 +13829,43 @@ dtype: object
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
+<div class="prompt input_prompt">In&nbsp;[41]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">sorted</span><span class="p">(</span><span class="nb">zip</span><span class="p">(</span><span class="n">rf</span><span class="o">.</span><span class="n">feature_importances_</span><span class="p">,</span> <span class="n">feature_names</span><span class="p">),</span> <span class="n">reverse</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[41]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>[(0.39346978499713897, &#39;avg_glucose_level&#39;),
+ (0.27548411711469956, &#39;bmi&#39;),
+ (0.19299537341010364, &#39;age&#39;),
+ (0.030943686214760686, &#39;Residence_type&#39;),
+ (0.029839428898182706, &#39;gender&#39;),
+ (0.026374686960822822, &#39;smoking_status&#39;),
+ (0.020392386361415906, &#39;hypertension&#39;),
+ (0.016433023961452426, &#39;heart_disease&#39;),
+ (0.014067512081423544, &#39;ever_married&#39;)]</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
 <div class="prompt input_prompt">In&nbsp;[39]:</div>
 <div class="inner_cell">
     <div class="input_area">
